--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visite a Suiça</title>
+  <title>Visite Busan</title>
   
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -16,26 +16,26 @@
     <main>
 
       <header>
-          <p>SUA PRÓXIMA VIAGEM</p>
-          <h1>Conheça a Suiça</h1>       
+          <p class="redletter"><strong>Sua próxima viagem</strong></p>
+          <h1 class="headerh1">Conheça Busan</h1>       
           
-        <img src="assets/img-header.jpg" alt="Suica Foto">
+        <img id="headfoto" src="assets/img-header.png" alt="Suica Foto">
 
-        <p>
+        <p class="headerp">
           A Suíça possui uma cultura fortemente influenciada pelos países vizinhos, Alemanha, Itália e França, cujas populações foram contribuintes para o desenvolvimento cultural local. 
           Cada cantão suíço possui festividades e manifestações próprias, muitas vezes derivadas de aspectos culturais locais. 
         </p>
       </header>
 
       <aside id="topo">
-        <p>Para os amantes de história</p>
-        <h2>Descubra 3 destinos imperdíveis na Suiça</h2>
-        <p>Além das paisagens alpinas, as cidades suíças combinam modernidade com um rico patrimônio histórico. Zurique é conhecida por sua vida cultural vibrante, com museus renomados e uma agitada vida noturna. Em Genebra, você pode explorar o Lago de Genebra e visitar organizações internacionais como a ONU. 
-          Já em Berna, a capital do país, o centro histórico medieval, declarado Patrimônio Mundial da UNESCO, encanta com suas ruas de paralelepípedos e torres antigas.</p>
+        <p class="redletter"><strong>Para os amantes de história</strong></p>
+        <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+        <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+          Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impre ssionante que irá encantar os fotógrafos.</p>
       </aside>
 
       <section id="zermatt">
-        <img src="assets/img-zermatt.jpg" alt="montanhas de zermatt">
+        <img src="assets/img-zermatt.png" alt="montanhas de zermatt">
 
         <h2>
           <ol>
@@ -47,48 +47,52 @@
 
         <p>
           O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. 
-          Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
+          Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
         </p>
 
         <p>
-          Bom para:
+        <strong>
+        Bom para:
           <ul>
             <li>
               História
             </li>
           </ul>
+        </strong>
         </p>
 
       </section>
 
       <section id="lucerna">
-        <img src="assets/img-lucerna.jpg" alt="paisagem lago lucerna">
+        <img src="assets/img-lucerna.png" alt="paisagem lago lucerna">
 
         <h2>
           <ol start="2">
             <li>
-              Lucerna e o Lago dos Quatro Cantões
+              Templo Beomeo-sa
             </li>
           </ol>
         </h2>
 
         <p>
-          Visitar Lucerna e o Lago dos Quatro Cantões é uma experiência que combina história, beleza natural e cultura suíça em um só lugar. 
-          Lucerna é uma cidade encantadora, situada às margens do lago e cercada por montanhas majestosas, como o Monte Pilatus e o Monte Rigi. 
-          Essa localização privilegiada proporciona paisagens deslumbrantes em qualquer época do ano.
+          O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. 
+          Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. 
+          O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
         </p>
         
         <p>
+        <strong>
           Bom para:
           <ul>
             <li>História</li>
           </ul>
+        </strong>
         </p>
 
       </section>
 
       <section id="Interlaken">
-        <img src="assets/img-interlaken.jpg" alt="Paisagem Interlaken">
+        <img src="assets/img-interlaken.png" alt="Paisagem Interlaken">
 
         <h2>
           <ol start="3">
@@ -98,28 +102,30 @@
           </ol>
         </h2>
 
-        <p>Visitar Interlaken e a região de Jungfrau é uma experiência única para quem busca aventuras ao ar livre, paisagens alpinas de tirar o fôlego e um contato direto com a natureza. 
-          Localizada entre dois lagos cristalinos – o Lago de Thun e o Lago de Brienz – Interlaken é conhecida como a porta de entrada para os Alpes Berneses e é um dos destinos mais icônicos da Suíça.
+        <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. 
+          O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
         </p>
 
         <p>
-          Bom para:
+          <strong>Bom para:
           <ul>
             <li>Casais</li>
             <li>Famílias</li>
             <li>Orçamento</li>
           </ul>
+        </strong>
         </p>
 
       </section>
 
       <aside id="bottom">
-        <p>A Suíça oferece uma variedade impressionante de experiências para todos os gostos, desde aventuras ao ar livre até mergulhos na cultura e na história.</p>
+        <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. 
+          Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
       </aside>
 
     </main>
 
-    <footer>Feito com carinho por Naio Trips</footer>
+    <footer>Feito com carinho por David Pereira</footer>
   </div>
   
 </body>
